[tool.poetry]
name = "libbyreads"
version = "0.1.0"
description = ""
authors = ["Travis Chambers <tjchambers32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
selenium = "^4.6.0"
chromedriver-py = "^108.0.5359.22"
webdriver-manager = "^3.8.5"
rich = "^12.6.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
